fixes scrollbar for windows
scrollbar should be set to overflow: auto

--- a/css/modules/Container.less
+++ b/css/modules/Container.less
@@ -2,7 +2,7 @@
 	padding: 1px 1px 0px;
 	margin-left: 300px;
 	margin-top: 40px;
-	overflow-y: scroll;
+	overflow-y: auto;
 	overflow-x: hidden;
 }
 
